--- a/2dpinn.ipynb
+++ b/2dpinn.ipynb
@@ -229,6 +229,7 @@
     "    if epoch % 50 == 0:\n",
     "        print(f'Epoch: {epoch}, Loss: {loss}')\n",
     "    if loss<=TOLERANCE:\n",
+    "        print(f\"Converged at epoch {epoch}\")\n",
     "        break\n",
     "\n"
    ]
