--- a/PINN_coupledDe.ipynb
+++ b/PINN_coupledDe.ipynb
@@ -1086,7 +1086,7 @@
     "\n",
     "(from the above given link)\n",
     "\n",
-    "![Analytical solution](https://files.mtstatic.com/site_4425/73047/0?Expires=1724000263&Signature=DxvgxmGmEg37Iat95J1nrFYoguwtIUF45VtRqfTq2944GHwMvUbWWbPs0xdHvJSabUaVx81im~nLrcyC9hCPKmuRbH5lu6v0-c9xWLxmVg7aTrcyeYmSzpZRIaalxkGs~6E6hl5rq8tHIPyccRmwqREF0K-~oF6ubWU2xEO9i-g_&Key-Pair-Id=APKAJ5Y6AV4GI7A555NA)"
+    "![Analytical solution](coupled_analytical.png)"
    ]
   }
  ],
